@@ -5,10 +5,8 @@ import com.bot.utils.FormattingUtils;
 import com.jagrosh.jdautilities.command.CommandEvent;
 import datadog.trace.api.Trace;
 import net.dv8tion.jda.api.EmbedBuilder;
-import net.dv8tion.jda.api.entities.Emote;
 import net.dv8tion.jda.api.entities.Guild;
-
-import java.util.stream.Collectors;
+import net.dv8tion.jda.api.entities.emoji.RichCustomEmoji;
 
 public class ServerInfoCommand extends GeneralCommand {
 
@@ -25,11 +23,11 @@ public class ServerInfoCommand extends GeneralCommand {
 
         Guild g = commandEvent.getGuild();
 
-        int botCount = g.getMembers().stream().filter(m -> m.getUser().isBot()).collect(Collectors.toList()).size();
-        int staticEmojiCount = g.getEmotes().stream().filter(m -> !m.isAnimated()).collect(Collectors.toList()).size();
-        int animatedEmojiCount = g.getEmotes().stream().filter(Emote::isAnimated).collect(Collectors.toList()).size();
-        int membersCount = g.getMembers().stream().filter(m -> !m.getUser().isBot()).collect(Collectors.toList()).size();
-        int onlineCount = g.getMembers().stream().filter(m -> m.getOnlineStatus().getKey().equals("online")).collect(Collectors.toList()).size();
+        int botCount = g.getMembers().stream().filter(m -> m.getUser().isBot()).toList().size();
+        int staticEmojiCount = g.getEmojis().stream().filter(m -> !m.isAnimated()).toList().size();
+        int animatedEmojiCount = g.getEmojis().stream().filter(RichCustomEmoji::isAnimated).toList().size();
+        int membersCount = g.getMembers().stream().filter(m -> !m.getUser().isBot()).toList().size();
+        int onlineCount = g.getMembers().stream().filter(m -> m.getOnlineStatus().getKey().equals("online")).toList().size();
         String customEmojis = "**Static**: " + staticEmojiCount + "\n**Animated:** " + animatedEmojiCount;
         String channels = "Voice Channels: " + g.getVoiceChannels().size() + "\nText Channels: " + g.getTextChannels().size() + "\n**Total:** " + g.getChannels().size();
         String members = "Members: " + membersCount + "\nBots: " + botCount + "\n**Total:** " + g.getMembers().size() + "\nOnline: " + onlineCount;
@@ -42,7 +40,7 @@ public class ServerInfoCommand extends GeneralCommand {
         embedBuilder.addField("Channels", channels, false);
         embedBuilder.addField("Roles", g.getRoles().size() + "", false);
         embedBuilder.addField("Custom Emojis", customEmojis, false);
-        embedBuilder.addField("Region", g.getRegionRaw(), false);
+        embedBuilder.addField("Region", g.retrieveRegions().complete().toString(), false);
         embedBuilder.addField("Shard", commandEvent.getJDA().getShardInfo().getShardString(), false);
         embedBuilder.setFooter(FormattingUtils.formatOffsetDateTimeToDay(g.getTimeCreated()), null);
         commandEvent.reply(embedBuilder.build());
